[package]
name = "local_crates_io_index"
version = "0.1.0"
edition = "2021"

[dependencies]
git2 = "0.20"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
tokio-util = { version = "0.7", features = ["time"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
dirs = "6.0"
actix-web = { version = "4.9.0" }
actix-files = "0.6.6"
chrono = "0.4"
